--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ title: Timeline
 description: "Timeline is multipurpose, single page Jekyll theme that includes a timeline section."
 keywords: "jekyll, theme"
 google-tracking-id:
+
+# Collections
+collections_dir: collections
+
+collections:
+  - team
