--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,17 @@
 # Site Settings
-title: "Cubetree Marketplace"
-description: "Timeline is multipurpose, single page Jekyll theme that includes a timeline section."
-keywords: "jekyll, theme"
+title: 'Cubetree Marketplace'
+description: 'Managing relationships to ensure success in partnerships by building and executing a strong strategy that focuses on the core capabilities that add real value to customers and ensure Sustainability, Savings and Success.'
+keywords: 'Marketplace, Cubetree, Make in India, India Partnership'
 google-tracking-id:
 company:
-  name: "Cubetree Marketplace"
-  mobile: +919999999999
-  email: "contact@cubetreemarketplace.com"
+  name: 'Cubetree Marketplace'
+  mobile: '+919999999999'
+  email: 'contact@cubetreemarketplace.com'
+  gmaps: 'Block C, Defence Colony, New Delhi, Delhi, India'
 
 # Collections
 collections_dir: collections
 
 collections:
   - team
+
