--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ keywords: 'Marketplace, Cubetree, Make in India, India Partnership'
 google-tracking-id:
 company:
   name: 'Cubetree Marketplace'
-  mobile: '+919999999999'
+  mobile: ''
   email: 'contact@cubetreemarketplace.com'
   gmaps: 'Block C, Defence Colony, New Delhi, Delhi, India'
 
