--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Settings
 title: 'Cubetree Marketplace'
-description: 'Managing relationships to ensure success in partnerships by building and executing a strong strategy that focuses on the core capabilities that add real value to customers and ensure Sustainability, Savings and Success.'
-keywords: 'Marketplace, Cubetree, Make in India, India Partnership'
+description: 'Ensuring success in partnerships by building and executing a strong strategy that drives focus on the core capabilities that add real value to customers and ensure Sustainability, Savings, and Success.'
+keywords: 'Marketplace, Cubetree, Make in India, India Partnership, Stevia, Sugarfree'
 google-tracking-id:
 company:
   name: 'Cubetree Marketplace'
