--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,7 +1,7 @@
 title: 'about'
 heading: 'About Us'
 subheading: ''
-description: "We are a boutique marketing company with an international team of professionals with cumulative experience of over 100 years in marketing, management, strategy, managing relationships with trust and integrity. We are currently focusing on the promotion of Make In India products."
+description: "We are a boutique marketing company with an international team of professionals with cumulative experience of over 150 years in marketing, management, strategy, managing relationships with trust and integrity."
 list:
   heading: 'Services We Offer'
   services:
@@ -9,7 +9,7 @@ list:
     - 'Advisory and Consultancy Services '
     - 'Business Process Facilitation'
     - 'Strategic Tie-ups and Joint Ventures'
-    - 'Market identification - Positioning Pricing Placement'
+    - 'Market Identification - Positioning Pricing Placement'
     - 'Customer Identification and Selection Advisory'
     - 'Product Identification and Selection Advisory'
     - 'Transactional Services'
