--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,7 +1,7 @@
 title: 'contact'
 heading: 'Request a sample'
 subheading: 'Ask for a quote'
-description: 'Drop us a line. We would be happy to help.'
+description: 'Drop us a line. We are happy to curate your low-calorie Stevia Solutions'
 form:
   header: 'Send us a message!'
   fields:
