--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,6 +1,6 @@
 title: 'hero'
-heading: 'Managing Relationships'
-subheading: 'Ensuring success in partnerships by building and executing a strong strategy that drives focus on the core capabilities that add real value to customers and ensure Sustainability, Savings and Success.'
+heading: 'Managing Relationships with Trust and Integrity'
+subheading: 'Ensuring success in partnerships by building and executing a strong strategy that drives focus on the core capabilities that add real value to customers and ensure the 3S... Sustainability, Savings, and Success.'
 button:
   visibility: false
   label: 'Learn More'
