--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -3,15 +3,25 @@ heading: ''
 subheading: ''
 description: ''
 clients:
-  - name: 'Arboreal and Products'
+  - name: 'Arboreal Bioinnovations P Ltd and Products'
     url: 'http://www.arborealstevia.in/'
     bgImg: './../../assets/uploads/leavesSeamless.jpg'
     bgImgSize: '150px'
     body:
       img: './../../assets/uploads/magicLeaf.jpg'
       imgDescription: 'Features of magic leaf stevia'
-      head: 'Exclusive Market Development Partners with Arboreal'
-      body: 'Representing Arboreal products such as Magicleaf Stevia. Their 100% natural sugar alternative
-                        which is free from Polyols, GMOs, allergens, gluten or
-                        chemicals.'
+      head: 'Joint Market Development Partners with Arboreal Bioinnovations P Ltd'
+      body: 'STEVIA 2.0 - low-calorie F&B products from our Joint Market Development Partners…..
+<br><br>
+Arboreal is an Award-winning company with a vertically integrated, organically certifiable, 100% natural stevia manufacturing process all done in India.
+<br><br>
+Arboreal is India’s first Make in India Stevia Company from plant to table.
+<br><br>
+Representing Arboreal products such as Magicleaf Stevia - range launched on 14 December 2019 has fssai approval and is already available on Amazon India.
+<br><br>
+Their 100% natural sugar alternative is free from Dextrose, Lactose, Polyols, GMOs, allergens, gluten or chemicals.
+<br><br>
+Arboreal is working exclusively with Cubetree for the Hotel Sector in India. Cubetree are looking at all opportunities primarily in the B2B and HORECA segments in India and abroad.
+<br><br>
+Can offer in various sizes and packing 40gm, 100gm, 250gm bottles, and 1 KG bulk packing.'
       btn: 'Request a sample'
