Update Basic Settings “site”

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cubetree
+title: Cubetree Marketplace
 description: >-
   Ensuring success in partnerships by building and executing a strong strategy
   that drives focus on the core capabilities that add real value to customers
