--- a/admin/config.yml
+++ b/admin/config.yml
@@ -54,9 +54,35 @@ collections:
     files:
       - label: 'Hero Section'
         name: 'hero'
-        file: '_data/home.yml'
+        file: '_data/hero.yml'
         fields:
-          - label: 'Section Title'
+          - label: 'Section ID'
             name: 'title'
             widget: 'string'
             pattern: ['([a-zA-Z][^\s])', 'Only Letters. No spaces.']
+          - label: 'Sub-Heading'
+            name: 'subheading'
+            widget: 'string'
+          - label: 'Button'
+            name: 'button'
+            widget: 'object'
+            fields:
+              - label: 'On/Off'
+                name: 'visibility'
+                widget: 'boolean'
+              - label: 'Button Text'
+                name: 'label'
+                widget: 'string'
+              - label: 'Button Link'
+                name: 'href'
+                widget: 'string'
+          - label: 'Hero Image'
+            name: 'image'
+            widget: 'object'
+            fields:
+              - label: 'Select Image'
+                name: 'src'
+                widget: 'image'
+              - label: 'Image Description'
+                name: 'alt'
+                widget: 'string'
