--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,4 +1,5 @@
 title: hero
+heading: 'Managing Relationships with Trust and Integrity'
 subheading: >-
   Ensuring success in partnerships by building and executing a strong strategy
   that drives focus on the core capabilities that add real value to customers
