Update Home Page “hero”

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,5 +1,5 @@
 title: hero
-heading: 'Managing Relationships with Trust and Integrity'
+heading: Managing Relationships with Trust and Integrity
 subheading: >-
   Ensuring success in partnerships by building and executing a strong strategy
   that drives focus on the core capabilities that add real value to customers
@@ -9,5 +9,5 @@ button:
   label: Learn More
   visibility: false
 image:
-  alt: 3D tree made of cubes
+  alt: Cubetree icon
   src: ./../assets/uploads/cubetreeIcon.svg
