Add PDF Mar 2020

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -24,4 +24,4 @@ Their 100% natural sugar alternative is free from Dextrose, Lactose, Polyols, GM
 Arboreal is working exclusively with Cubetree for the Hotel Sector in India. Cubetree are looking at all opportunities primarily in the B2B and HORECA segments in India and abroad.
 <br><br>
 Can offer in various sizes and packing 40gm, 100gm, 250gm bottles, and 1 KG bulk packing.'
-      btn: 'Request a sample'
+      btn: 'Learn more'
