--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -21,7 +21,7 @@ Representing Arboreal products such as Magicleaf Stevia - range launched on 14 D
 <br><br>
 Their 100% natural sugar alternative is free from Dextrose, Lactose, Polyols, GMOs, allergens, gluten or chemicals.
 <br><br>
-Arboreal is working exclusively with Cubetree for the Hotel Sector in India. Cubetree are looking at all opportunities primarily in the B2B and HORECA segments in India and abroad.
+Arboreal is working exclusively with Cubetree for the Hotel Sector in India. Cubetree are looking at all opportunities primarily in the B2B and HORECA segments in India and abroad. Cubetree is also looking for B2C opportunities through Distributors and Channel Partners.
 <br><br>
-Can offer in various sizes and packing 40gm, 100gm, 250gm bottles, and 1 KG bulk packing.'
+Apart from Sachets, can offer in various sizes and packing 40gm, 100gm, 250gm bottles / Spout Packs, and 500gm, 1, 2, 5, 10 KG bulk packing.'
       btn: 'Learn more'
